--- a/Project/Assembly-CSharp-vs.csproj
+++ b/Project/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\AndyRotate.cs" />
      <Compile Include="Assets\Scripts\Asteroids\AsteroidCreator.cs" />
+     <Compile Include="Assets\Scripts\Asteroids\DecorativeAsteroid.cs" />
      <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\CustomGravity.cs" />
      <Compile Include="Assets\Scripts\LeftGunControls.cs" />
