--- a/Project/Assembly-CSharp-vs.csproj
+++ b/Project/Assembly-CSharp-vs.csproj
@@ -39,21 +39,24 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>D:/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity 4/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>D:/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity 4/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AndyRotate.cs" />
      <Compile Include="Assets\Scripts\Asteroids\AsteroidCreator.cs" />
+     <Compile Include="Assets\Scripts\Asteroids\DecorativeAsteroid.cs" />
      <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\CustomGravity.cs" />
-     <Compile Include="Assets\Scripts\LeftGunControls.cs" />
-     <Compile Include="Assets\Scripts\RightGunControls.cs" />
+     <Compile Include="Assets\Scripts\Environment\DayCycle.cs" />
+     <Compile Include="Assets\Scripts\Global.cs" />
+     <Compile Include="Assets\Scripts\Guns\LeftGunControls.cs" />
+     <Compile Include="Assets\Scripts\Guns\RightGunControls.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Program Files (x86)/Unity 4/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
