--- a/Project/Assembly-CSharp-vs.csproj
+++ b/Project/Assembly-CSharp-vs.csproj
@@ -56,11 +56,13 @@
      <Compile Include="Assets\Scripts\GUI\StartMenu.cs" />
      <Compile Include="Assets\Scripts\Global.cs" />
      <Compile Include="Assets\Scripts\Guns\LeftGunControls.cs" />
+     <Compile Include="Assets\Scripts\Guns\PreviewAim.cs" />
      <Compile Include="Assets\Scripts\Guns\RightGunControls.cs" />
      <Compile Include="Assets\Scripts\MasterControlScript.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\TeleportBullet.cs" />
      <Compile Include="Assets\XInputDotNet\Examples\XInputTestCS.cs" />
+     <None Include="Assets\Shaders\TransparentCutoutUnlit.shader" />
      <None Include="Assets\XInputDotNet\MITLicense.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
