--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -61,9 +61,12 @@
      <Compile Include="Assets\Scripts\MasterControlScript.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\TeleportBullet.cs" />
+     <Compile Include="Assets\Scripts\TimeBullet.cs" />
+     <Compile Include="Assets\Scripts\TimeDilation.cs" />
      <Compile Include="Assets\XInputDotNet\Examples\XInputTestCS.cs" />
      <None Include="Assets\Shaders\TransparentCutoutUnlit.shader" />
      <None Include="Assets\XInputDotNet\MITLicense.txt" />
+     <None Include="Assets\Shaders\BackgroundScreenProjection.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
