--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -49,10 +49,12 @@
      <Compile Include="Assets\Scripts\AndyRotate.cs" />
      <Compile Include="Assets\Scripts\Asteroids\AsteroidCreator.cs" />
      <Compile Include="Assets\Scripts\Asteroids\DecorativeAsteroid.cs" />
+     <Compile Include="Assets\Scripts\Audio\Music.cs" />
      <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\CustomGravity.cs" />
      <Compile Include="Assets\Scripts\Environment\DayCycle.cs" />
      <Compile Include="Assets\Scripts\GUI\Ambient.cs" />
+     <Compile Include="Assets\Scripts\GUI\HUD.cs" />
      <Compile Include="Assets\Scripts\GUI\StartMenu.cs" />
      <Compile Include="Assets\Scripts\Global.cs" />
      <Compile Include="Assets\Scripts\Guns\LeftGunControls.cs" />
@@ -66,6 +68,7 @@
      <Compile Include="Assets\XInputDotNet\Examples\XInputTestCS.cs" />
      <None Include="Assets\Shaders\TransparentCutoutUnlit.shader" />
      <None Include="Assets\XInputDotNet\MITLicense.txt" />
+     <None Include="Assets\Imports\BackgroundScreenProjection.shader" />
      <None Include="Assets\Shaders\BackgroundScreenProjection.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
