--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Project/Library/metadata
 /Project/Library/ScriptAssemblies
 /Project/Temp
+/Project/Assembly-CSharp-vs.csproj
+/Project/Assembly-CSharp.csproj
