--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -39,10 +39,10 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>D:/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity 4/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>D:/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity 4/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -53,7 +53,6 @@
      <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\CustomGravity.cs" />
      <Compile Include="Assets\Scripts\Environment\DayCycle.cs" />
-     <Compile Include="Assets\Scripts\GUI\Ambient.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD.cs" />
      <Compile Include="Assets\Scripts\GUI\StartMenu.cs" />
      <Compile Include="Assets\Scripts\Global.cs" />
@@ -66,14 +65,13 @@
      <Compile Include="Assets\Scripts\TimeBullet.cs" />
      <Compile Include="Assets\Scripts\TimeDilation.cs" />
      <Compile Include="Assets\XInputDotNet\Examples\XInputTestCS.cs" />
-     <None Include="Assets\Shaders\BackgroundScreenProjection.shader" />
-     <None Include="Assets\Imports\BackgroundScreenProjection.shader" />
-     <None Include="Assets\Shaders\Normal Specular.shader" />
      <None Include="Assets\Shaders\TransparentCutoutUnlit.shader" />
-     <None Include="Assets\XInputDotNet\MITLicense.txt" />
      <None Include="Assets\Shaders\Normal Specular RimLight.shader" />
+     <None Include="Assets\XInputDotNet\MITLicense.txt" />
+     <None Include="Assets\Shaders\Normal Specular.shader" />
+     <None Include="Assets\Shaders\BackgroundScreenProjection.shader" />
  <Reference Include="UnityEngine.UI">
- <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Program Files (x86)/Unity 4/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
